# bagas-ai

./: .env.example  .gitattributes  .gitignore  README.md  install.ps1  install.sh  keyprobe.py  pyproject.toml  requirements.txt  run.py
.githooks/: bump_version.py  pre-commit
src/agent/: __init__.py  __main__.py  config.py  core.py  llm.py  longmem.py  memory.py  models.py  osinfo.py  prefs.py  projectindex.py  prompts.py  scripts.py  session.py  setup_wizard.py  telegram_perms.py  updater.py  web_timing.py  workspace.py
src/agent/connectors/: __init__.py  base.py  browser.py  claude.py  kimi.py  qwen.py
src/agent/interfaces/: api.py  cli.py  telegram_bot.py  winmouse.py
src/agent/tools/: __init__.py  base.py  extras.py  files.py  interact_tool.py  media.py  memory_tool.py  screen.py  search.py  shell.py  web_search.py
