[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bagasai"
version = "1.0.17"
description = "bagas-ai — AI agent serbaguna, dipanggil dari terminal mana pun."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # WAJIB: seluruh model bagas-ai berjalan lewat browser, jadi Playwright
    # bukan lagi pelengkap opsional seperti dulu.
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "pyfiglet>=1.0.0",
    "ddgs>=6.0.0",
    "python-telegram-bot>=21.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

# Perintah global yang bisa dipanggil dari terminal mana pun.
[project.scripts]
bagas-ai = "agent.__main__:main"
bagasai = "agent.__main__:main"
bagas = "agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
